# ProjectManager

./: Cargo.toml  RUST_LEARNING_GUIDE.md
.claude/state/: current_task.json
sessions/: sessions-config.json
sessions/tasks/: m-implement-project-manager.md
src/: lib.rs
src/core/: graph.rs  mod.rs  node.rs  timeline.rs
